--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/dist/main.js" defer></script>
+    <script type="module" src="/dist/main.js"></script>
   </body>
 </html>
